# LifeView

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
assets/assets/shaders/: cell.wgsl  viridis.wgsl
assets/shaders/: cell.wgsl  cividis.wgsl  heatmap.wgsl  inferno.wgsl  plasma.wgsl
src/: cell.rs  grid.rs  grid_coloration.rs  growth.rs  instancing.rs  interface.rs  main.rs  rule.rs  shapes.rs
videos/: colormaps.mov  orbium.mov
wasm/: LifeView.d.ts  LifeView.js  LifeView_bg.wasm.d.ts
web/: index.html
web/assets/shaders/: cell.wgsl
web/wasm/: LifeView.d.ts  LifeView.js  LifeView_bg.wasm.d.ts
