[package]
name = "LifeView"
version = "0.2.0"
edition = "2024"

[dependencies]
bevy = {version = "0.17.2", features = ["webgl2"]}
bevy_camera = "0.18.1"
bevy_egui = "0.38.0"
bytemuck = "1.25.0"
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
