[package]
name = "LifeView"
version = "0.3.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy_camera = "0.18.1"
bevy_egui = "0.38.0"
bevy_embedded_assets = "0.14"
bytemuck = "1.25.0"
rand = "0.9.2"
rayon = "1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Smaller, faster WASM for release builds
[profile.release]
lto = true
codegen-units = 1
